--- a/index.html
+++ b/index.html
@@ -8,12 +8,110 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="core/css/style.css" rel="stylesheet" media="screen">
     <script type="text/javascript" src="assets/Box2d/Box2dWeb-2.1.a.3.min.js"></script>
+    <script type="text/javascript" src="assets/js/grahamscan.js"></script>
 </head>
 <body>
 
-    <a href="pixi.html" target="_blank" class="btn btn-primary btn-large">Pixi</a>
-    <a href="kinetic.html" target="_blank" class="btn btn-large">Kinetic</a>
-    <a href="three.html" target="_blank" class="btn btn-large">Three</a>
+	<div class="navbar navbar-inverse navbar-fixed-bottom">
+		<div class="navbar-inner">
+			<div class="container">
+				<a class="brand" href="#">Tools</a>
+				<a href="#debug-modal" role="button" class="btn btn-primary" data-toggle="modal">Physics Debug</a>
+				<a href="#notes-modal" role="button" class="btn btn" data-toggle="modal">Notes</a>
+			</div>
+		</div>
+	</div>
+
+	<div id="debug-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="debug-modal-label" aria-hidden="true">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="debug-modal-label">Physics Debug</h3>
+		</div>
+		<div class="alert alert-info">
+			<button type="button" class="close" data-dismiss="alert">&times;</button>
+			<strong>Note:</strong> The scale of the physics world is smaller then the rendered world!
+		</div>
+		<div class="modal-body">
+			<canvas id="debug_canvas" width="600" height="400"></canvas>
+		</div>
+		<div class="modal-footer">
+			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		</div>
+	</div>
+
+
+	<div id="notes-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="debug-modal-label" aria-hidden="true">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h2 id="debug-modal-label">Notes</h2>
+		</div>
+		<div class="modal-body">
+			<h4>Todo</h4>
+		    <ul>
+		        <li>Stages of damage for blocks</li>	
+		    </ul>
+			<h4>Block Types</h4>
+			<ul class="unstyled">
+				<li><span class="badge badge-info">0</span> Void</li>
+				<li><span class="badge badge-info">1</span> Grass</li>
+				<li><span class="badge badge-info">2</span> Dirt</li>
+				<li><span class="badge badge-info">3</span> Stone</li>
+				<li><span class="badge badge-info">4</span> Sand</li>
+				<li><span class="badge badge-info">5</span> Gravel</li>
+				<li><span class="badge badge-info">6</span> Water</li>
+				<li><span class="badge badge-info">7</span> Lava</li>
+			</ul>
+			<h4>Depth Ranges</h4>
+			<ul class="unstyled">
+				<li><span class="badge badge-primary">0-35km</span> Crust</li>
+				<li><span class="badge badge-primary">35-60km</span> Upper mantle</li>
+				<li><span class="badge badge-primary">35-2890km</span> Mantle</li>
+				<li><span class="badge badge-primary">100-700km</span> Asthenosphere</li>
+				<li><span class="badge badge-primary">2890-5100km</span> Outer core</li>
+				<li><span class="badge badge-primary">5100-6378km</span> Inner core</li>
+			</ul>
+		</div>
+		<div class="modal-footer">
+			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		</div>
+	</div>
+
+	<div id="world_container">
+	</div>	
+	<canvas style="position:absolute; bottom:0px; width:400px; right:0px; height:400px;" id="canvas"></canvas>
+	<div id="debug_monitor" class="well">
+		<h2>Debug Monitor</h2>
+		<b>Depth:</b> <span class="depth">0</span><br/>
+		<span class="test"></span>
+	</div>
+
 	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="assets/js/stats.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/underscore.min.js"></script>
+	<script src="assets/js/seedrandom.js"></script>
+	<script src="assets/js/perlin-noise-simplex.js"></script>
+	<script src="assets/js/pixi.dev.js"></script>
+
+
+	<script src="core/js/base.js"></script>
+	<script src="core/js/Config.js"></script>
+
+
+	<script src="core/js/Entity.js"></script>
+	<script src="core/js/Debry.js"></script>
+	<script src="core/js/Block.js"></script>
+
+
+	<script src="core/js/RenderEnginePixi.js"></script>
+	<script src="core/js/WorldEngine.js"></script>
+	<script src="core/js/PhysicsEngine.js"></script>
+	<script src="core/js/LightEngine.js"></script>
+	<script src="core/js/InputEngine.js"></script>
+	<script src="core/js/Player.js"></script>
+
+	<script src="core/js/GameEngine.js"></script>
+
+	<script src="core/js/Game.js"></script>
 </body>
 </html>
