animations and state machine

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 	<script src="assets/js/underscore.min.js"></script>
 	<script src="assets/js/seedrandom.js"></script>
 	<script src="assets/js/perlin-noise-simplex.js"></script>
-	<script src="assets/js/pixi.dev.js"></script>
+	<script src="assets/js/pixi.min.js"></script>
+	<script src="assets/js/pixi-spine.min.js"></script>
 	<script src="assets/js/proton.min.js"></script>
 
 
@@ -99,6 +100,7 @@
 	<script src="core/js/Config.js"></script>
 
 
+	<script src="core/js/Loader.js"></script>
 	<script src="core/js/Entity.js"></script>
 	<script src="core/js/Debry.js"></script>
 	<script src="core/js/Block.js"></script>
