--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 	<script src="core/js/base.js"></script>
 	<script src="core/js/Config.js"></script>
 
+	<script src="core/js/AudioEngine.js"></script>
 
 	<script src="core/js/Loader.js"></script>
 	<script src="core/js/Entity.js"></script>
