--- a/index.html
+++ b/index.html
@@ -12,75 +12,126 @@
 </head>
 <body>
 
-	<div class="navbar navbar-inverse navbar-fixed-bottom">
-		<div class="navbar-inner">
-			<div class="container">
-				<a class="brand" href="#">Tools</a>
-				<a href="#debug-modal" role="button" class="btn btn-primary" data-toggle="modal">Physics Debug</a>
-				<a href="#notes-modal" role="button" class="btn btn" data-toggle="modal">Notes</a>
+	<nav class="navbar navbar-default navbar-inverse navbar-fixed-bottom">
+		<div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#">Tools</a>
+		    </div>
+
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		        <li><a href="#" data-target="#debug-modal" role="button" data-toggle="modal">Physics Debug</a></li>
+				<li><a href="#" data-target="#notes-modal" role="button" data-toggle="modal">Notes</a></li>
+		      </ul>
+		    </div>
+		</div>
+	</nav>
+
+	<div class="modal fade" id="debug-modal" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+					<h3 id="debug-modal-label">Physics Debug</h3>
+				</div>
+				<div class="modal-body">
+					<canvas id="debug_canvas" width="565" height="400"></canvas>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn" data-dismiss="modal">Close</button>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="debug-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="debug-modal-label" aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h3 id="debug-modal-label">Physics Debug</h3>
-		</div>
-		<div class="alert alert-info">
-			<button type="button" class="close" data-dismiss="alert">&times;</button>
-			<strong>Note:</strong> The scale of the physics world is smaller then the rendered world!
-		</div>
-		<div class="modal-body">
-			<canvas id="debug_canvas" width="600" height="400"></canvas>
-		</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-		</div>
-	</div>
-
-	<div id="notes-modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="debug-modal-label" aria-hidden="true">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h2 id="debug-modal-label">Notes</h2>
-		</div>
-		<div class="modal-body">
-			<h4>Todo</h4>
-		    <ul>
-		        <li>Stages of damage for blocks</li>	
-		    </ul>
-			<h4>Block Types</h4>
-			<ul class="unstyled">
-				<li><span class="badge badge-info">0</span> Void</li>
-				<li><span class="badge badge-info">1</span> Grass</li>
-				<li><span class="badge badge-info">2</span> Dirt</li>
-				<li><span class="badge badge-info">3</span> Stone</li>
-				<li><span class="badge badge-info">4</span> Sand</li>
-				<li><span class="badge badge-info">5</span> Gravel</li>
-				<li><span class="badge badge-info">6</span> Water</li>
-				<li><span class="badge badge-info">7</span> Lava</li>
-			</ul>
-			<h4>Depth Ranges</h4>
-			<ul class="unstyled">
-				<li><span class="badge badge-primary">0-35km</span> Crust</li>
-				<li><span class="badge badge-primary">35-60km</span> Upper mantle</li>
-				<li><span class="badge badge-primary">35-2890km</span> Mantle</li>
-				<li><span class="badge badge-primary">100-700km</span> Asthenosphere</li>
-				<li><span class="badge badge-primary">2890-5100km</span> Outer core</li>
-				<li><span class="badge badge-primary">5100-6378km</span> Inner core</li>
-			</ul>
-		</div>
-		<div class="modal-footer">
-			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+	<div id="notes-modal" class="modal fade" tabindex="-1" role="dialog">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+					<h2 id="debug-modal-label">Notes</h2>
+				</div>
+				<div class="modal-body">
+					<h4>Todo</h4>
+				    <ul>
+				        <li>Stages of damage for blocks</li>	
+				    </ul>
+					<h4>Block Types</h4>
+					<ul class="unstyled">
+						<li><span class="badge badge-info">0</span> Void</li>
+						<li><span class="badge badge-info">1</span> Grass</li>
+						<li><span class="badge badge-info">2</span> Dirt</li>
+						<li><span class="badge badge-info">3</span> Stone</li>
+						<li><span class="badge badge-info">4</span> Sand</li>
+						<li><span class="badge badge-info">5</span> Gravel</li>
+						<li><span class="badge badge-info">6</span> Water</li>
+						<li><span class="badge badge-info">7</span> Lava</li>
+					</ul>
+					<h4>Depth Ranges</h4>
+					<ul class="unstyled">
+						<li><span class="badge badge-primary">0-35km</span> Crust</li>
+						<li><span class="badge badge-primary">35-60km</span> Upper mantle</li>
+						<li><span class="badge badge-primary">35-2890km</span> Mantle</li>
+						<li><span class="badge badge-primary">100-700km</span> Asthenosphere</li>
+						<li><span class="badge badge-primary">2890-5100km</span> Outer core</li>
+						<li><span class="badge badge-primary">5100-6378km</span> Inner core</li>
+					</ul>
+				</div>
+				<div class="modal-footer">
+					<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<div id="world_container">
-	</div>	
-	<canvas style="position:absolute; bottom:0px; width:400px; right:0px; height:400px;" id="canvas"></canvas>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-3">
+
+			</div>
+			<div class="col-md-6">
+				<div id="world_container">
+				</div>	
+			</div>
+			<div class="col-md-3">
+				<br/>
+				<br/>
+				<div class="hud">
+					<label>Health</label>
+					<div class="progress" id="health">
+					  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;  width: 100%;">
+					    100%
+					  </div>
+					</div>
+					<label>Fuel</label>
+					<div class="progress" id="fuel">
+					  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 100%;">
+					    100%
+					  </div>
+					</div>
+					<label>Temprature</label>
+					<div class="progress" id="temprature">
+					  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em;">
+					    36.C
+					  </div>
+					</div>
+					<label>Depth:</label>
+					<span id="depth">--</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	<div id="debug_monitor" class="well">
 		<h2>Debug Monitor</h2>
-		<b>Depth:</b> <span class="depth">0</span><br/>
 		<b>MPB:</b> <span class="mpb">0</span><br/>
 		<span class="test"></span>
 	</div>
