Shops Cash and Score

--- a/index.html
+++ b/index.html
@@ -95,7 +95,15 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
-
+				<br/>
+				<br/>
+				<div class="hud">
+					<label>Score</label>
+					<div id="score">0</div>
+					<br/>
+					<label>Cash</label>
+					<div id="cash">0 $</div>
+				</div>
 			</div>
 			<div class="col-md-6">
 				<div id="world_container">
@@ -156,6 +164,8 @@
 	<script src="core/js/Entity.js"></script>
 	<script src="core/js/Debry.js"></script>
 	<script src="core/js/Block.js"></script>
+	<script src="core/js/Shop.js"></script>
+	<script src="core/js/Item.js"></script>
 
 
 	<script src="core/js/RenderEnginePixi.js"></script>
