--- a/index.html
+++ b/index.html
@@ -103,6 +103,13 @@
 					<br/>
 					<label>Cash</label>
 					<div id="cash">0 $</div>
+					<hr/>
+					<label>Cargo</label>
+					<div class="progress" id="cargo">
+					  <div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="0" style="min-width: 2em;">
+					  	0%
+					  </div>
+					</div>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -133,6 +140,7 @@
 					</div>
 					<label>Depth:</label>
 					<span id="depth">--</span>
+					
 				</div>
 			</div>
 		</div>
