--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
 		</div>
 	</div>
 
+	<div id="store-modal" class="modal fade" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title">Store</h4>
+				</div>
+				<div class="modal-body">
+					<h2>Components Upgrades</h2>
+					<div class="row components"></div>
+					<h2>Shop Services</h2>
+					<div class="row services"></div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="container">
 		<div class="row">
 			<div class="col-md-3">
@@ -172,8 +192,9 @@
 	<script src="core/js/Entity.js"></script>
 	<script src="core/js/Debry.js"></script>
 	<script src="core/js/Block.js"></script>
-	<script src="core/js/Shop.js"></script>
+	<script src="core/js/Component.js"></script>
 	<script src="core/js/Item.js"></script>
+	<script src="core/js/Shop.js"></script>
 
 
 	<script src="core/js/RenderEnginePixi.js"></script>
